--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "react": "^19.0.0",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.0.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "sharp": "^0.33.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
