--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "axios": "^1.8.4",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.4.0",
