--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,12 @@
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha-v3": "^1.10.1",
+    "react-image-gallery": "^1.4.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "sharp": "^0.33.5",
+    "swiper": "^11.2.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
